# DeepLearningSchool

./: .gitignore  README.md  pyproject.toml
NLP/: [homework]simple_embeddings.ipynb
Speech/: Homework_1_Environmental Sound Classification_for_students.ipynb
